--- a/src/CSS/Slider.css
+++ b/src/CSS/Slider.css
@@ -12,8 +12,9 @@ div#startTime {
     margin-top: 0.5em
 }
 div#slider {
-    margin-top: 1cm
+    margin-top: 1.5em
 }
 input#ok {
     background-color: #4469b0
 }
+
