Param comp + clickable cells

--- a/src/CSS/SliderTableWrapper.css
+++ b/src/CSS/SliderTableWrapper.css
@@ -5,3 +5,8 @@
     margin-left: 4cm;
   justify-content: left;
 }
+input#identify {
+  margin-top: 1.5em;
+  background-color: #4469b0;
+    padding: 4px 7px;
+}
