Fix Communication between Front + back End

--- a/src/CSS/TableFregAge.css
+++ b/src/CSS/TableFregAge.css
@@ -12,3 +12,9 @@ table#age {
     overflow-y: auto;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     }
+.table-wrapper-scroll-chart {
+    display: block;
+    max-height: 700px;
+    overflow-y: auto;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    }    
