--- a/src/CSS/Patterns.css
+++ b/src/CSS/Patterns.css
@@ -2,3 +2,15 @@
     margin-left: 2cm;
     
 }
+.TableFregAgeMiMic {
+    margin-top: 5cm;
+    margin-left: 5cm;
+  
+}
+div#graph {
+    margin-left: 3cm;
+}
+
+Graph#graph-id {
+    margin-top: 3cm
+}
