remove return + repair button, move pattern to left

--- a/src/CSS/LastUpdate.css
+++ b/src/CSS/LastUpdate.css
@@ -1,14 +1,19 @@
 input#return {
-    margin-left: 1em;
+    margin-left: 4em;
+    
     margin-top: 1.5em;
     margin-bottom: 1em;
   background-color: #4469b0;
-    padding: 4px 7px;
+    padding: 9px 16px;
 }
 input#repair {
     margin-left: 1em;
     margin-top: 1.5em;
     margin-bottom: 1em;
   background-color: #4469b0;
-    padding: 4px 7px;
+    padding: 9px 16px;
+}
+div#tableMimic {
+  width: 900px;
+  overflow: auto;
 }
