--- a/src/CSS/Patterns.css
+++ b/src/CSS/Patterns.css
@@ -8,4 +8,17 @@ div#graph {
     margin-left: 1cm;
     margin-right: 1.5cm
 }
-
+div#sliderMostStaleCell {
+    margin-top: 1.5em;
+    background-color: #FFFFFF;
+    border: 1px solid transparent;
+    border-radius: 0.3cm;
+    padding-top: 2px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+input#applyMost {
+    margin-left: 40px;
+    margin-bottom: 5px
+}
