--- a/src/CSS/Data.css
+++ b/src/CSS/Data.css
@@ -11,15 +11,20 @@ input#upload {
     
 }
 div#data {
-    width: 270px;
+    margin-top: -1px;
     background-color: #FFFFFF;
     border: 1px solid transparent;
     border-radius: 0.3cm;
-    padding-top: 10px;
+    padding-top: -10px;
   padding-right: 10px;
   padding-bottom: 10px;
-  padding-left: 10px;
+  padding-left: 20px;
 }
-h1#data {
+h3#data {
     margin-top: 0px
+}
+input#upload {
+    margin-top: 0.5px;
+    float: right;
+    margin-right: 20px;
 }
