--- a/src/CSS/TableFregAge.css
+++ b/src/CSS/TableFregAge.css
@@ -29,3 +29,11 @@ div#tableMimic {
 .li {
     font-size: 130%;
 }
+li#boldFreq {
+    font-weight: bold;
+    font-size: 165%
+}
+li#boldAge {
+    font-weight: bold;
+    font-size: 165%
+}
