--- a/src/CSS/Slider.css
+++ b/src/CSS/Slider.css
@@ -17,15 +17,18 @@ div#slider {
     border: 1px solid transparent;
     border-radius: 0.3cm;
     padding-top: 0px;
-  padding-right: 10px;
+  padding-right: 0cm;
   padding-bottom: 10px;
   padding-left: 20px;
+  width: 8.35cm
+  
 }
 input#ok {
     background-color: #4469b0;
     padding: 4px 7px;
-   
+    margin-top: 0.4em;
 }
-h3#value {
-    margin-top: 0px
+h2#value {
+    margin-top: 0px;
+    font-size: 190%;
 }
