--- a/src/CSS/Patterns.css
+++ b/src/CSS/Patterns.css
@@ -13,8 +13,8 @@ div#sliderMostStaleCell {
     background-color: #FFFFFF;
     border: 1px solid transparent;
     border-radius: 0.3cm;
-    padding-top: 2px;
-  padding-right: 10px;
+    padding-top: 12px;
+  padding-right: 30px;
   padding-bottom: 10px;
   padding-left: 20px;
 }
@@ -28,6 +28,15 @@ div#startTime {
 }
 .largeSizePattern {
     font-size: 170%;
+    
+  }
+  .largeSizePatternProgressLabel{
+    font-size: 170%;
+    margin-left: -7px
+  }
+  .largeSizeCleaningStatus {
+      margin-left: 50px;
+    font-size: 250%;
   }
 input#applyMost{
     margin-top: 10px;
@@ -35,9 +44,9 @@ input#applyMost{
 }
 .indexedStep {
     color: white;
-    width: 45px;
-    height: 45px;
-    font-size: 12px;
+    width: 43px;
+    height: 43px;
+    font-size: 15px;
     background-color: rgba(0, 116, 217, 1);
     border-radius: 50%;
     display: flex;
@@ -63,8 +72,10 @@ b#test45 {
     margin-left:20px
 }
 div#progressbar {
-    margin-left: 18px
+    margin-left: 120px;
+    margin-top: -25px;
+    
 }
 div#test123 {
-    margin-left: 20px
+    margin-left: 30px
 }
