--- a/src/CSS/LastUpdate.css
+++ b/src/CSS/LastUpdate.css
@@ -90,3 +90,15 @@ div#newLastUpdate {
   margin-right: 30px;
   padding-right: 30px
 }
+th {
+  font-size: 19px
+}
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  padding: 5x;
+}
