--- a/src/CSS/Stale.css
+++ b/src/CSS/Stale.css
@@ -17,3 +17,19 @@
 .click {
   margin-left: 10px
 }
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+.loaderText {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
