--- a/src/CSS/Patterns.css
+++ b/src/CSS/Patterns.css
@@ -19,7 +19,7 @@ div#sliderMostStaleCell {
   padding-left: 20px;
 }
 div#sliderMostStaleCellIMR {
-    margin-top: 1.5em;
+    margin-top: 95%;
     background-color: #FFFFFF;
     border: 1px solid transparent;
     border-radius: 0.3cm;
