--- a/src/CSS/Stale.css
+++ b/src/CSS/Stale.css
@@ -1,6 +1,6 @@
 .rowStale  {
     min-height: 10vh;
-  display: flex;
+  /* display: flex; */
     
     margin-left: 1cm;
   justify-content: left;
