--- a/src/CSS/LastUpdate.css
+++ b/src/CSS/LastUpdate.css
@@ -14,13 +14,14 @@ input#repair {
     padding: 9px 16px;
 }
 div#tableMimic {
-  width: 950px;
+  margin-left: 7%;
+  width: 580px;
   overflow: auto;
   height: 500px;
 }
 div#tableMimicIMR {
-  margin-top: 30px;
-  width: 950px;
+  margin-left: 20%;
+  width: 580px;
   overflow: auto;
   height: 500px;
 }
@@ -94,8 +95,10 @@ table.paddingBetweenCols2 {
   width: 30%;  
 }
 div#newLastUpdate {
+  margin-top: 40px;
   margin-right: 30px;
-  padding-right: 30px
+  padding-right: 30px;
+  display: flex;
 }
 th {
   font-size: 19px
@@ -130,4 +133,13 @@ input[type=checkbox]
   position: sticky;
   background-color: #e9ebee;
   top:0px;
+}
+.floatRight {
+  margin-right: 20px
+}
+b#recalIMR {
+  float: right;
+}
+b#recalCC {
+  float: right;
 }
