added vertical line in Stale

--- a/src/CSS/Stale.css
+++ b/src/CSS/Stale.css
@@ -33,3 +33,11 @@
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
+.verticalLine {
+  border-left: dashed#466aae;
+  height: 105%;
+  margin-left: 17.3cm;
+  position:absolute;
+  width: 1px;
+  /* border-style: dashed; */
+}
